--- a/db/seeds.yml
+++ b/db/seeds.yml
@@ -11,7 +11,7 @@ activities:
 
 # assembly
 - title: Salmon 104 &deg;F
-  youtube_id: Qgg9lVnkOnQ
+  youtube_id: 9lWGCR0RSn4
   difficulty: Intermediate
   yield: 10 servings
   description: >
@@ -47,14 +47,14 @@ activities:
       unit: a/n
     steps:
     - title: Serving
-      directions: "
-        * Sprinke coriander, black pepper, and Maldon sea salt on each portion of salmon while they are on a sheet tray.\n
-        * Strain pickles from their brine and drain them on paper towel.\n
-        * Add the salt to the watercress puree.\n
-        * Place a spoonful of horseradish cream, a spoonful of watercress puree, and one salmon portion on each chilled plate.\n
-        * Arrange the pickled onions on the cream and around the salmon.\n
-        * Drizzle a small amount of olive oil over the fish.\n
-        * Serve."
+      directions: |
+        * Sprinke coriander, black pepper, and Maldon sea salt on each portion of salmon while they are on a sheet tray.
+        * Strain pickles from their brine and drain them on paper towel.
+        * Add the salt to the watercress puree.
+        * Place a spoonful of horseradish cream, a spoonful of watercress puree, and one salmon portion on each chilled plate.
+        * Arrange the pickled onions on the cream and around the salmon.
+        * Drizzle a small amount of olive oil over the fish.
+        * Serve.
 
 # Salmon mi-cut
 - title: Salmon mi-cuit
@@ -108,10 +108,10 @@ activities:
 
     - title: Dissolve salt and sugar into the water
       image_id: IMG_4817.jpg
-      directions: "
-        * Dissolve salt and sugar into the water.\n
-        * Chill brine to less than 41 &deg;F / 5 &deg;C\n
-        * Tip: Dissolve the sugar and salt into half the weight of water, then add the rest of the water as ice to quickly chill the brine.\n"
+      directions: |
+        * Dissolve salt and sugar into the water.
+        * Chill brine to less than 41 &deg;F / 5 &deg;C
+        * Tip: Dissolve the sugar and salt into half the weight of water, then add the rest of the water as ice to quickly chill the brine.
     - title: while brine
       image_id: IMG_4862.jpg
       directions: "* While brine is chilling, remove pin bones from salmon loin."
@@ -123,9 +123,9 @@ activities:
       directions: "* Strain salmon portions from the brine."
     - title: vacuum
       image_id: IMG_4946.jpg
-      directions: "
-        * Vacuum package the salmon loins individually.\n
-        * Tip: Add a small amount of olive oil to the packaging with salmon to make it easier to remove the cooked salmon later."
+      directions: |
+        * Vacuum package the salmon loins individually.
+        * Tip: Add a small amount of olive oil to the packaging with salmon to make it easier to remove the cooked salmon later.
     - title: cook
       image_id: IMG_5026.jpg
       directions: "* Sous vide cook at 104 &deg;F / 40 &deg;C for 60 minutes to reach equilibrium temperature."
@@ -133,9 +133,9 @@ activities:
       image_id: IMG_5134.jpg
       directions: "* Remove cooked salmon and submerge in ice water. Then refigerate for at least 6 hours for texture to set."
     - title: portion
-      directions: "
-        * Portion chilled salmon loin into ten 40 g portions, each about &frac34; in. / 2 cm. thick\n
-        * Cover and refigerate sliced portions until needed."
+      directions: |
+        * Portion chilled salmon loin into ten 40 g portions, each about &frac34; in. / 2 cm. thick
+        * Cover and refigerate sliced portions until needed.
 
 # pickled onions
 - title: Picked Onions
@@ -205,15 +205,15 @@ activities:
       - title: Coriander seed, whole
         quantity: 4
         unit: g
-      directions: "
-        * Scale ingredients\n
-        * Combine ingredients"
+      directions: |
+        * Scale ingredients
+        * Combine ingredients
 
     - title: clean and trim
       image_id: picked_459.jpg
-      directions: "
-        * Clean and trim baby red onions, then quarter.\n
-        * Seperate onion layers, sorting the red outer petals from the inner white ones"
+      directions: |
+        * Clean and trim baby red onions, then quarter.
+        * Seperate onion layers, sorting the red outer petals from the inner white ones
       ingredients:
       - title: Small red onions
         quantity: 3
@@ -227,10 +227,10 @@ activities:
       ingredients:
       - title: Prepared onions
       - title: Prepared pickling brine
-      directions: "
-        * Place the trimmed red onion petals, white onion petals, and green onions into seperate container and cover with pickling brine.\n
-        * Infuse for at least 90 minutes before using.\n
-        * Or vacuum package the onions in the pickling brine for 1 minute pickling."
+      directions: |
+        * Place the trimmed red onion petals, white onion petals, and green onions into seperate container and cover with pickling brine.
+        * Infuse for at least 90 minutes before using.
+        * Or vacuum package the onions in the pickling brine for 1 minute pickling.
 
 #  watercress
 - title: Watercress Puree
@@ -279,29 +279,29 @@ activities:
       directions: "* Blanch watercress in boiling water for 45 sec."
     - title: strain from boiling
       image_id: IMG_5157.jpg
-      directions: "
-        * Strain from the boiling water and plunge into ice bath.\n
-        * Stir watercress in the ice bath to ensure even cooling."
+      directions: |
+        * Strain from the boiling water and plunge into ice bath.
+        * Stir watercress in the ice bath to ensure even cooling.
     - title: strain ice-bath
       image_id: IMG_5172.jpg
-      directions: "
-        * Strain watercress from the ice bath and place into blender.\n
-        * Tip: Tare the empty blender top on your scale in advance so that you can then weight your puree without having to remove it from the blender."
+      directions: |
+        * Strain watercress from the ice bath and place into blender.
+        * Tip: Tare the empty blender top on your scale in advance so that you can then weight your puree without having to remove it from the blender.
     - title: check-weight
       image_id: IMG_5194.jpg
       ingredients:
       - title: Xanthan gum
         quantity: 0.23
         unit: g
-      directions: "
-        * Check the weight of the puree before adding 0.1% of the puree's weight in xanthan gum, 0.23 grams for 230 grams of puree in this case.\n
-        * Blend the puree together with the xanthan gum until smooth. The xanthan gum will prevent the puree from seperating and weeping."
+      directions: |
+        * Check the weight of the puree before adding 0.1% of the puree's weight in xanthan gum, 0.23 grams for 230 grams of puree in this case.
+        * Blend the puree together with the xanthan gum until smooth. The xanthan gum will prevent the puree from seperating and weeping.
     - title: strain puree
       image_id: IMG_5207.jpg
-      directions: "
-        * Strain the puree through a chinoise or sieve\n
-        * If the puree will not be used promptly, vacuum package it to eliminate oxygen and preserve the color of the puree.\n
-        * Season the puree with salt just before serving to avoid discoloration."
+      directions: |
+        * Strain the puree through a chinoise or sieve
+        * If the puree will not be used promptly, vacuum package it to eliminate oxygen and preserve the color of the puree.
+        * Season the puree with salt just before serving to avoid discoloration.
 
 
 # horseradish cream
@@ -355,22 +355,22 @@ activities:
       - title: Cream
         quantity: 350
         unit: g
-      directions: "
-        * Microplane 50 g and place it into a sous vide bag.\n
-        * Add the cream."
+      directions: |
+        * Microplane 50 g and place it into a sous vide bag.
+        * Add the cream.
     - title: vacuum the bag
       image_id: horseradish_5.jpg
-      directions: "
-        * Vacuum package and refrigerate.\n
-        * Refigerate from 1 to 24 hours. The longer the infusion time the hotter the cream will become."
+      directions: |
+        * Vacuum package and refrigerate.
+        * Refigerate from 1 to 24 hours. The longer the infusion time the hotter the cream will become.
     - title: strain
       image_id: horseradish_6.jpg
       directions: "* Strain the cream and then discard the pulp."
     - title: whisk
       image_id: horseradish_8.jpg
-      directions: "
-        * Whisk salt and xanthan gum into the cream.\n
-        * Whip the cream into very soft peaks.\n
-        * Refrigerate if not using immediately."
+      directions: |
+        * Whisk salt and xanthan gum into the cream.
+        * Whip the cream into very soft peaks.
+        * Refrigerate if not using immediately.
 
 
