--- a/db/seeds.yml
+++ b/db/seeds.yml
@@ -374,4 +374,7 @@ activities:
         * Whip the cream into very soft peaks.
         * Refrigerate if not using immediately.
 
-
+copy:
+- location: course-syllabus
+  markdown: |
+    <h3>Stuff</h3>
