--- a/db/seeds.yml
+++ b/db/seeds.yml
@@ -375,6 +375,70 @@ activities:
         * Refrigerate if not using immediately.
 
 copy:
+# instrcutor - chris
+- location: instructor-chris
+  copy_content: |
+    <h4>Chris Young</h4>
+    <p>
+      Chris is the principal coauthor of the acclaimed six-volume work
+      <em>Modernist Cuisine: The Art and Science of Cooking</em>, which was named
+      both the 2012 Cookbook of the Year and Best Professional Cookbook
+      of the year by the James Beard Foundation and has been a worldwide
+      best seller. Chris was also the founding chef of Heston
+      Blumenthal’s Fat Duck Experimental Kitchen, the secret culinary
+      laboratory behind the innovative dishes served at one of the best
+      restaurants in the world. Prior to becoming a chef, he completed
+      degrees in theoretical mathematics and biochemistry.
+    </p>
+# instructor- grant
+- location: instructor-grant
+  copy_content: |
+    <h4>Grant Crilly</h4>
+    <p>
+      Grant was the first development chef hired by the Modernist
+      Cuisine team. Prior to this he was chef de cuisine at Busaba in
+      Mumbai and Mistral in Seattle, and served as head development chef
+      at Delicious Planet. He has cooked for Pascal Barbot at
+      L’Astrance, worked with Pierré Herme’s team at Grégoire-Ferrandi,
+      and practiced butchery at Bajon Jean Pierrie in Paris.
+    </p>
+# creator - chris
+- location: creator-chris
+  copy_content: |
+    <h4>Chris Young</h4>
+    <p>
+      Chris is the principal coauthor of the acclaimed six-volume work
+      <em>Modernist Cuisine: The Art and Science of Cooking</em>, which was named
+      both the 2012 Cookbook of the Year and Best Professional Cookbook
+      of the year by the James Beard Foundation and has been a worldwide
+      best seller. Chris was also the founding chef of Heston
+      Blumenthal’s Fat Duck Experimental Kitchen, the secret culinary
+      laboratory behind the innovative dishes served at one of the best
+      restaurants in the world. Prior to becoming a chef, he completed
+      degrees in theoretical mathematics and biochemistry.
+    </p>
+# creator - grant
+- location: creator-grant
+  copy_content: |
+    <h4>Grant Crilly</h4>
+    <p>
+      Grant was the first development chef hired by the Modernist
+      Cuisine team. Prior to this he was chef de cuisine at Busaba in
+      Mumbai and Mistral in Seattle, and served as head development chef
+      at Delicious Planet. He has cooked for Pascal Barbot at
+      L’Astrance, worked with Pierré Herme’s team at Grégoire-Ferrandi,
+      and practiced butchery at Bajon Jean Pierrie in Paris.
+    </p>
+# creator- ryan
+- location: creator-ryan
+  copy_content: |
+    <h4>Ryan Matthew Smith</h4>
+    <p>
+      Ryan was the principal photographer and photo editor for <em>Modernist
+      Cuisine: The Art and Science of Cooking</em>. Smith’s work has been
+      featured by PPN, Photographer, Life, Time, The New York Times,
+      Feature Shoot, Quo, and Abduzeedo.
+    </p>
 # homepage blurb
 - location: homepage-blurb
   copy_content: |
