--- a/config/heroku.yml
+++ b/config/heroku.yml
@@ -14,6 +14,9 @@ production:
   stack: cedar
   config:
     BUNDLE_WITHOUT: "development:test:guard"
+    FOG_DIRECTORY: chefsteps-staging-assets
+    ASSET_SYNC_GZIP_COMPRESSION: true
+    FOG_PROVIDER: AWS
   addons:
     - memcachier:dev
     - newrelic:standard
@@ -24,6 +27,9 @@ staging:
   config: &default
     BUNDLE_WITHOUT: "development:test:guard"
     RAILS_ENV: "staging"
+    FOG_DIRECTORY: chefsteps-staging-assets
+    ASSET_SYNC_GZIP_COMPRESSION: true
+    FOG_PROVIDER: AWS
   addons:
     - memcachier:dev
     - newrelic:standard
