--- a/db/seeds.yml
+++ b/db/seeds.yml
@@ -5,6 +5,15 @@ admins:
 - email: aaron@substantial.com
   password: asdfasdf
 
+- email: chris@delvekitchen.com
+  password: howtochef22
+
+- email: ryan@delvekitchen.com
+  password: howtochef22
+
+- email: edward@delvekitchen.com
+  password: howtochef22
+
 activities:
 # - title: Lecture
 #   youtube_id: ydOB-YNJ8Jw
